Fixed first-child issue with extra padding

--- a/resources/assets/sass/layout/_article.scss
+++ b/resources/assets/sass/layout/_article.scss
@@ -59,17 +59,12 @@
 article {
     padding-bottom: 150px;
     max-width: 800px;
-    &:first-child {
-        padding-top: 80px;
-    }
     .article-wrapper {
         font-size: 110%;
     }
     .article-body {
-        p, ul, h1, h2, h3, h4, h5 {
-            &:first-child {
-                padding-top: 80px;
-            }
+        > p, > ul, > h1, > h2, > h4, > h5 {
+            padding-top: 80px;
         }
         ul {
             margin: 20px 0;
